--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,16 @@ li {
     list-style-type: none;
 }
 
-a {
+ul li a {
+    font-weight: 500;
+    font-size: 1.5em;
+    font-variant: small-caps;
+    color: white;
+    list-style-type: none !important;
+    transition: all 0.5s ease;
+}
+
+.sm-social a {
     font-weight: 500;
     font-size: 1.5em;
     font-variant: small-caps;
@@ -55,7 +64,7 @@ a {
     transition: all 0.5s ease;
 }
 
-a:hover {
+.sm-social a:hover {
     color: black;
 }
 
@@ -92,7 +101,6 @@ a:hover {
 }
 
 .aboutme {
-    height: 100vh;
     /* background-color: rgb(9, 0, 128); */
     color: white;
 }
@@ -104,6 +112,8 @@ a:hover {
 
 .aboutme-down {
     background-color: black;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 #sobremi {
@@ -112,7 +122,7 @@ a:hover {
 }
 
 #descripcion {
-    padding-bottom: 5%;
+    padding-bottom: 60px;
 }
 
 .sm-card {
@@ -131,6 +141,7 @@ a:hover {
     background-color: black !important;
     border-color: rgb(23, 106, 159) !important;
     transition: all 0.5s ease-out;
+    margin-bottom: 30px;
 }
 
 .card:hover {
@@ -166,4 +177,98 @@ a:hover {
 .sm-card-title {
     padding-bottom: 5%;
     height: 250px;
+}
+
+.sm-proyectos {
+    padding: 50px;
+}
+
+.sm-proyectos-title {
+    padding-bottom: 35px;
+    text-align: center;
+    color: rgba(23, 107, 159, 0.938);
+}
+
+.sm-col-prin {
+    padding-bottom: 20px;
+}
+
+.sm-col {
+    height: 300px;
+    border-radius: 15px;
+    border: 1px solid black;
+    background-color: rgb(12, 12, 12);
+    color: rgba(23, 107, 159, 0.938);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s ease-in-out;
+}
+
+.sm-col:hover {
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+.sm-image {
+    height: 125px;
+}
+
+.sm-description {
+    background-color: rgba(255, 255, 255, 0.952);
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    text-align: center;
+    padding: 10px;
+}
+
+.sm-description a {
+    font-size: 2.5em !important;
+    color: rgba(23, 107, 159, 0.938);
+    transition: all 0.5s;
+}
+
+.sm-description a:hover {
+    color: rgb(168, 168, 168);
+}
+
+.sm-description h6 {
+    font-size: 2.5em;
+}
+
+.sm-description:hover {
+    opacity: 1;
+}
+
+.sm-footer {}
+
+.sm-footer p a {
+    color: black;
+}
+
+.sm-footer-proyectos p a {
+    text-decoration: none;
+    transition: all 1s;
+}
+
+.sm-footer-proyectos p a:hover {
+    color: rgb(54, 54, 54);
+}
+
+.sm-footer-social>a i {
+    color: black !important;
+    text-decoration: none;
+    transition: all 1s;
+}
+
+.sm-footer-social>a:hover {
+    color: rgb(0, 89, 255) !important;
 }
