--- a/css/styles.css
+++ b/css/styles.css
@@ -347,3 +347,71 @@ ul li a:hover {
 .sm-footer-social>a:hover {
     color: rgb(29, 112, 189) !important;
 }
+
+.sm-logros {
+    height: 800px;
+    color: black;
+    margin: 50px 0 50px 0;
+}
+
+.w-30 {
+    height: 600px;
+}
+
+.w-50 {
+    height: 600px;
+}
+
+@media only screen and (max-width: 600px) {
+    .w-30 {
+        height: 250px;
+    }
+    .w-50 {
+        height: 250px;
+    }
+    .sm-cv {
+        display: none;
+    }
+}
+
+.carousel-inner {
+    padding-bottom: 50px !important;
+}
+
+.carousel-inner img {
+    margin: auto;
+}
+
+.sm-icon {
+    color: black;
+}
+
+.carousel-indicators {
+    color: black;
+}
+
+.sm-logros-title {
+    padding-bottom: 35px;
+    text-align: center;
+    color: rgba(29, 112, 189);
+}
+
+.carousel-indicators>* {
+    background-color: black !important;
+}
+
+.sm-cv {
+    padding: 0 0 100px 0;
+}
+
+.sm-cv-title {
+    padding-bottom: 35px;
+    text-align: center;
+    color: rgba(29, 112, 189);
+}
+
+.center-cv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
