--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,21 @@ body {
     height: 100%;
 }
 
+.sm-new-portfolio-web {
+    background-color: #f9d423;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sm-new-portfolio-web a {
+    color: rgb(15, 91, 255);
+    font-weight: bolder;
+    font-size: 1.2em;
+}
+
 .sm-color-primary {
     color: rgb(78, 128, 204)
 }
